--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "dist/main.js",
   "license": "MIT",
   "scripts": {
+    "notes": "rm -rf assets/audio/* && node gen_audio.mjs",
     "clean": "rm -rf dist",
     "lint": "tsc --outDir dist",
     "lint:watch": "tsc --outDir dist --watch",
@@ -20,6 +21,7 @@
     "@rollup/plugin-typescript": "^8.3.2",
     "babel-plugin-tsconfig-paths": "^1.0.3",
     "babel-preset-solid": "^1.4.2",
+    "node-fetch": "^3.2.10",
     "rollup": "^2.74.1",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-generate-html-template": "^1.7.0",
@@ -34,6 +36,7 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "@rollup/plugin-replace": "^4.0.0"
+    "@rollup/plugin-replace": "^4.0.0",
+    "tone": "^14.8.40"
   }
 }
